--- a/package.json
+++ b/package.json
@@ -3,32 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.9.3",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-redux": "^5.0.7",
-    "react-scripts-ts": "3.1.0",
+    "react": "16.8.2",
+    "react-dom": "16.8.2",
+    "react-redux": "6.0.0",
     "redux": "4.0.1",
-    "redux-devtools-extension": "^2.13.5",
-    "redux-thunk": "^2.3.0",
-    "sass-loader": "^7.1.0"
+    "redux-thunk": "2.3.0"
   },
   "scripts": {
     "start": "react-app-rewired start --scripts-version react-scripts-ts",
     "build": "react-app-rewired build --scripts-version react-scripts-ts",
-    "test": "react-app-rewired test --scripts-version react-scripts-ts --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "react-app-rewired test --scripts-version react-scripts-ts --env=jsdom"
   },
   "devDependencies": {
-    "@types/enzyme": "^3.1.13",
-    "@types/jest": "^23.3.1",
-    "@types/node": "^10.9.0",
-    "@types/react": "^16.4.11",
-    "@types/react-dom": "^16.0.7",
-    "@types/react-redux": "^6.0.6",
-    "enzyme": "^3.5.0",
-    "react-app-rewired": "^1.5.2",
-    "typescript": "^3.0.1"
+    "@types/enzyme": "3.1.18",
+    "@types/jest": "24.0.5",
+    "@types/node": "11.9.4",
+    "@types/react": "16.8.3",
+    "@types/react-dom": "16.8.1",
+    "@types/react-redux": "7.0.1",
+    "enzyme": "3.8.0",
+    "extract-text-webpack-plugin": "3.0.2",
+    "node-sass": "4.11.0",
+    "react-app-rewired": "2.1.0",
+    "react-scripts-ts": "3.1.0",
+    "redux-devtools-extension": "2.13.8",
+    "sass-loader": "7.1.0",
+    "typescript": "3.3.3",
+    "webpack-dev-server": "3.1.14"
   }
 }
